Bug 1921008: part 6) Add javascript-url navigation via form-submission tests for Trusted Types. r=tschuster
Differential Revision: https://phabricator.services.mozilla.com/D223596

UltraBlame original commit: 999a70cf9b2dcc6fc81fc8fbe9f7a811f6056db5

--- a/testing/web-platform/tests/trusted-types/support/navigation-support.html
+++ b/testing/web-platform/tests/trusted-types/support/navigation-support.html
@@ -69,6 +69,26 @@ link
 a
 >
 <
+form
+>
+<
+input
+id
+=
+"
+submit
+"
+type
+=
+"
+submit
+"
+>
+<
+/
+form
+>
+<
 script
 >
 navigateToJavascriptURL
