--- a/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
+++ b/testing/web-platform/tests/trusted-types/trusted-types-navigation.html
@@ -68,6 +68,11 @@ body
 <
 script
 >
+"
+use
+strict
+"
+;
 function
 expectMessage
 (
@@ -322,24 +327,149 @@ close
 )
 ;
 }
+const
+kFormSubmission
+=
+"
+form
+-
+submission
+"
+;
+/
+/
+When
+adding
+more
+elements
+adapt
+all
+functions
+consuming
+the
+existing
+elements
+.
+const
+kNavigationElements
+=
+[
+"
+anchor
+"
+kFormSubmission
+]
+;
+function
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+searchParams
+)
+{
+return
+(
+navigationElement
+=
+=
+kFormSubmission
+)
+?
+[
+kFormSubmission
++
+"
+=
+1
+"
+.
+.
+.
+searchParams
+]
+:
+searchParams
+;
+}
+function
+joinToHref
+(
+searchParams
+originAndPathName
+)
+{
+if
+(
+searchParams
+.
+length
+>
+0
+)
+{
+return
+originAndPathName
++
+"
+?
+"
++
+searchParams
+.
+join
+(
+"
+&
+"
+)
+;
+}
+return
+originAndPathName
+;
+}
+for
+(
+const
+navigationElement
+of
+kNavigationElements
+)
+{
 promise_test
 (
 t
 =
 >
 {
-openWindow
+const
+page
+=
+joinToHref
 (
-t
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+]
+)
 "
-support
-/
 navigation
 -
 support
 .
 html
 "
+)
+;
+openWindow
+(
+t
+support
+/
+{
+page
+}
 )
 ;
 return
@@ -350,13 +480,7 @@ all
 [
 expectLoadedAsMessage
 (
-"
-navigation
--
-support
-.
-html
-"
+page
 )
 expectViolationAsMessage
 (
@@ -369,10 +493,13 @@ href
 )
 ;
 }
-"
 Navigate
 a
 window
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -382,7 +509,6 @@ in
 enforcing
 mode
 .
-"
 )
 ;
 promise_test
@@ -391,22 +517,39 @@ t
 =
 >
 {
-openWindow
+const
+page
+=
+joinToHref
 (
-t
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
 "
-support
-/
+defaultpolicy
+=
+1
+"
+]
+)
+"
 navigation
 -
 support
 .
 html
-?
-defaultpolicy
-=
-1
 "
+)
+;
+openWindow
+(
+t
+support
+/
+{
+page
+}
 )
 ;
 return
@@ -417,30 +560,13 @@ all
 [
 expectLoadedAsMessage
 (
-"
-navigation
--
-support
-.
-html
-?
-defaultpolicy
-=
-1
-"
+page
 )
 expectLoadedAsMessage
 (
+page
++
 "
-navigation
--
-support
-.
-html
-?
-defaultpolicy
-=
-1
 &
 "
 +
@@ -455,10 +581,13 @@ defaultpolicywashere
 )
 ;
 }
-"
 Navigate
 a
 window
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -472,7 +601,6 @@ in
 enforcing
 mode
 .
-"
 )
 ;
 promise_test
@@ -484,6 +612,14 @@ t
 const
 page
 =
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+]
+)
 "
 navigation
 -
@@ -495,6 +631,8 @@ support
 .
 html
 "
+)
+;
 openWindow
 (
 t
@@ -517,30 +655,38 @@ page
 )
 expectLoadedAsMessage
 (
-"
-navigation
--
-support
-.
-html
-?
-"
-+
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
 kNavigationAttempted
-+
 "
-&
 continue
 "
+]
+)
+"
+navigation
+-
+support
+.
+html
+"
+)
 )
 ]
 )
 ;
 }
-"
 Navigate
 a
 window
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -552,7 +698,6 @@ report
 only
 mode
 .
-"
 )
 ;
 promise_test
@@ -564,6 +709,19 @@ t
 const
 page
 =
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+"
+defaultpolicy
+=
+1
+"
+]
+)
 "
 navigation
 -
@@ -574,11 +732,8 @@ only
 support
 .
 html
-?
-defaultpolicy
-=
-1
 "
+)
 ;
 openWindow
 (
@@ -602,34 +757,43 @@ page
 )
 expectLoadedAsMessage
 (
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+"
+defaultpolicy
+=
+1
+"
+kNavigationAttempted
+"
+defaultpolicywashere
+"
+]
+)
 "
 navigation
 -
 support
 .
 html
-?
-defaultpolicy
-=
-1
-&
 "
-+
-kNavigationAttempted
-+
-"
-&
-defaultpolicywashere
-"
+)
 )
 ]
 )
 ;
 }
-"
 Navigate
 a
 window
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -645,7 +809,6 @@ report
 only
 mode
 .
-"
 )
 ;
 promise_test
@@ -654,22 +817,39 @@ t
 =
 >
 {
-openWindow
+const
+page
+=
+joinToHref
 (
-t
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
 "
-support
-/
+frame
+=
+1
+"
+]
+)
+"
 navigation
 -
 support
 .
 html
-?
-frame
-=
-1
 "
+)
+;
+openWindow
+(
+t
+support
+/
+{
+page
+}
 )
 ;
 return
@@ -680,17 +860,7 @@ all
 [
 expectLoadedAsMessage
 (
-"
-navigation
--
-support
-.
-html
-?
-frame
-=
-1
-"
+page
 )
 expectViolationAsMessage
 (
@@ -703,10 +873,13 @@ href
 )
 ;
 }
-"
 Navigate
 a
 frame
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -716,7 +889,6 @@ in
 enforcing
 mode
 .
-"
 )
 ;
 promise_test
@@ -725,26 +897,44 @@ t
 =
 >
 {
-openWindow
+const
+page
+=
+joinToHref
 (
-t
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
 "
-support
-/
+defaultpolicy
+=
+1
+"
+"
+frame
+=
+1
+"
+]
+)
+"
 navigation
 -
 support
 .
 html
-?
-defaultpolicy
-=
-1
-&
-frame
-=
-1
 "
+)
+;
+openWindow
+(
+t
+support
+/
+{
+page
+}
 )
 ;
 return
@@ -755,38 +945,13 @@ all
 [
 expectLoadedAsMessage
 (
-"
-navigation
--
-support
-.
-html
-?
-defaultpolicy
-=
-1
-&
-frame
-=
-1
-"
+page
 )
 expectLoadedAsMessage
 (
+page
++
 "
-navigation
--
-support
-.
-html
-?
-defaultpolicy
-=
-1
-&
-frame
-=
-1
 &
 "
 +
@@ -801,10 +966,13 @@ defaultpolicywashere
 )
 ;
 }
-"
 Navigate
 a
 frame
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -818,7 +986,6 @@ in
 enforcing
 mode
 .
-"
 )
 ;
 promise_test
@@ -830,6 +997,19 @@ t
 const
 page
 =
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+"
+frame
+=
+1
+"
+]
+)
 "
 navigation
 -
@@ -840,11 +1020,9 @@ only
 support
 .
 html
-?
-frame
-=
-1
 "
+)
+;
 openWindow
 (
 t
@@ -867,34 +1045,43 @@ page
 )
 expectLoadedAsMessage
 (
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
 "
-navigation
--
-support
-.
-html
-?
 frame
 =
 1
-&
 "
-+
 kNavigationAttempted
-+
 "
-&
 continue
 "
+]
+)
+"
+navigation
+-
+support
+.
+html
+"
+)
 )
 ]
 )
 ;
 }
-"
 Navigate
 a
 frame
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -906,7 +1093,6 @@ report
 only
 mode
 .
-"
 )
 ;
 promise_test
@@ -918,6 +1104,24 @@ t
 const
 page
 =
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+"
+defaultpolicy
+=
+1
+"
+"
+frame
+=
+1
+"
+]
+)
 "
 navigation
 -
@@ -928,15 +1132,8 @@ only
 support
 .
 html
-?
-defaultpolicy
-=
-1
-&
-frame
-=
-1
 "
+)
 ;
 openWindow
 (
@@ -960,38 +1157,48 @@ page
 )
 expectLoadedAsMessage
 (
+joinToHref
+(
+maybeAddFormSubmissionToSearchParams
+(
+navigationElement
+[
+"
+defaultpolicy
+=
+1
+"
+"
+frame
+=
+1
+"
+kNavigationAttempted
+"
+defaultpolicywashere
+"
+]
+)
 "
 navigation
 -
 support
 .
 html
-?
-defaultpolicy
-=
-1
-&
-frame
-=
-1
-&
 "
-+
-kNavigationAttempted
-+
-"
-&
-defaultpolicywashere
-"
+)
 )
 ]
 )
 ;
 }
-"
 Navigate
 a
 frame
+via
+{
+navigationElement
+}
 with
 javascript
 :
@@ -1007,9 +1214,9 @@ report
 only
 mode
 .
-"
 )
 ;
+}
 <
 /
 script
