--- a/testing/web-platform/tests/trusted-types/support/navigation-report-only-support.html
+++ b/testing/web-platform/tests/trusted-types/support/navigation-report-only-support.html
@@ -73,6 +73,26 @@ link
 a
 >
 <
+form
+>
+<
+input
+id
+=
+"
+submit
+"
+type
+=
+"
+submit
+"
+>
+<
+/
+form
+>
+<
 script
 >
 navigateToJavascriptURL
