Bug 1923975 [wpt PR 48570] - [reporting][wpt] Isolate stashed reports, a=testonly
Automatic update from web-platform-tests
[reporting][wpt] Isolate stashed reports

Several `reporting/` tests use the same wptserve stash entry (report ID
`d0d517bf-891b-457a-b970-8b2b2c81a0bf` [0]). If at least two such tests
are unlucky enough to run in parallel, the first one to poll `report.py`
will cannibalize all of the reports and get too many, while the others
will get too few.

Fix this by regenerating different IDs for all but one of the tests. For
the external WPTs that embed on `middle-frame.https.sub.html`, plumb the
report ID to `same-origin-report.https.sub.html` as a query parameter,
where it can be substituted into the `Reporting-Endpoints` response
header [1].

Continue using hardcoded IDs instead of randomly generated ones so that
reports can be matched with their tests.

[0]: https://source.chromium.org/search?q=d0d517bf-891b-457a-b970-8b2b2c81a0bf%20f:wpt%20&ss=chromium%2Fchromium%2Fsrc
[1]: https://web-platform-tests.org/writing-tests/server-pipes.html#sub

Bug: 338470458
Test: run_web_tests.py external/wpt/reporting wpt_internal/reporting --fully-parallel -j 36
Change-Id: I46d4d9de954d853615b067725a136a65a6df622b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5922396
Reviewed-by: Ian Clelland <iclellandchromium.org>
Commit-Queue: Jonathan Lee <jonathanjleegoogle.com>
Cr-Commit-Position: refs/heads/main{#1367116}

--

wpt-commits: 3e0163f8505cac8a369aab811179cc9dc0f60ebe
wpt-pr: 48570

UltraBlame original commit: 65daf356d062d1c4a9a2635f554342347d934585

--- a/testing/web-platform/tests/reporting/cross-origin-same-site-credentials.https.sub.html
+++ b/testing/web-platform/tests/reporting/cross-origin-same-site-credentials.https.sub.html
@@ -130,15 +130,15 @@ const
 id
 =
 '
-d0d517bf
+d6f382f4
 -
-891b
+028d
 -
-457a
+51e0
 -
-b970
+9ef2
 -
-8b2b2c81a0bf
+a635439da02a
 '
 ;
 promise_test
@@ -409,7 +409,6 @@ frame
 .
 src
 =
-"
 https
 :
 /
@@ -462,7 +461,12 @@ www
 ]
 }
 }
-"
+&
+reportID
+=
+{
+id
+}
 ;
 /
 /
@@ -551,7 +555,6 @@ csp
 -
 violation
 '
-"
 https
 :
 /
@@ -594,7 +597,12 @@ https
 sub
 .
 html
-"
+?
+reportID
+=
+{
+id
+}
 )
 ;
 /
