--- a/testing/web-platform/tests/reporting/resources/middle-frame.https.sub.html
+++ b/testing/web-platform/tests/reporting/resources/middle-frame.https.sub.html
@@ -63,7 +63,7 @@ host
 )
 |
 |
-"
+'
 {
 {
 hosts
@@ -73,7 +73,23 @@ hosts
 ]
 }
 }
-"
+'
+;
+const
+reportID
+=
+searchParams
+.
+get
+(
+'
+reportID
+'
+)
+|
+|
+'
+'
 ;
 const
 frame
@@ -126,6 +142,12 @@ https
 sub
 .
 html
+?
+reportID
+=
+{
+reportID
+}
 ;
 document
 .
