--- a/testing/web-platform/tests/reporting/same-origin-cross-site-credentials.https.sub.html
+++ b/testing/web-platform/tests/reporting/same-origin-cross-site-credentials.https.sub.html
@@ -130,15 +130,15 @@ const
 id
 =
 '
-d0d517bf
+44b17b0d
 -
-891b
+1041
 -
-457a
+5640
 -
-b970
+acc5
 -
-8b2b2c81a0bf
+4321844b47e4
 '
 ;
 promise_test
@@ -379,7 +379,6 @@ frame
 .
 src
 =
-"
 https
 :
 /
@@ -420,7 +419,12 @@ https
 sub
 .
 html
-"
+?
+reportID
+=
+{
+id
+}
 ;
 document
 .
@@ -518,7 +522,6 @@ csp
 -
 violation
 '
-"
 https
 :
 /
@@ -560,7 +563,12 @@ https
 sub
 .
 html
-"
+?
+reportID
+=
+{
+id
+}
 )
 ;
 /
