--- a/testing/web-platform/tests/reporting/same-origin-same-site-credentials.https.sub.html
+++ b/testing/web-platform/tests/reporting/same-origin-same-site-credentials.https.sub.html
@@ -131,15 +131,15 @@ const
 id
 =
 '
-d0d517bf
+54ba9bc5
 -
-891b
+c2f2
 -
-457a
+5a7d
 -
-b970
+96ab
 -
-8b2b2c81a0bf
+331842a51499
 '
 ;
 promise_test
@@ -380,7 +380,6 @@ frame
 .
 src
 =
-"
 https
 :
 /
@@ -420,7 +419,12 @@ https
 sub
 .
 html
-"
+?
+reportID
+=
+{
+id
+}
 ;
 document
 .
@@ -518,7 +522,6 @@ csp
 -
 violation
 '
-"
 https
 :
 /
@@ -560,7 +563,12 @@ https
 sub
 .
 html
-"
+?
+reportID
+=
+{
+id
+}
 )
 ;
 /
