Bug 1924180 [wpt PR 48581] - Rename & refactor invoker commands to reflect new spec decisions., a=testonly
Automatic update from web-platform-tests
Rename & refactor invoker commands to reflect new spec decisions.

Invoker commands now live solely on HTMLButtonElement, and have been
dropped from HTMLInputElement. This was discussed and resolved + minuted
in Jul 18 WHATNOT meeting:
https://github.com/whatwg/html/issues/10471#issuecomment-2237135334)

Words must be separated with dashes. This was discussed and resolved +
minuted in Jul 18 WHATNOT meeting:
https://github.com/whatwg/html/issues/10471#issuecomment-2237135334)

"Custom" commands now require a double dash (`--`) prefix. This was
discussed & resolved + minuted in the Jul 25 OpenUI meeting:
https://github.com/openui/open-ui/issues/969#issuecomment-2251153158

In addition, CommandEvent#invoker is now renamed to CommandEvent#source
as discussed and resolved + minuted in Jul 18 WHATNOT meeting:
https://github.com/whatwg/html/issues/10471#issuecomment-2237135334)

This CL updates the tests & implementation to follow these changes. The
changes can also be found in the spec PR which reflects this updated
status:

https://github.com/whatwg/html/pull/9841

Bug: 40284894
Change-Id: Iefa91a1736867239a21f8717aee1fcaaa54fdfd0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5839601
Reviewed-by: Mason Freed <masonfchromium.org>
Reviewed-by: Luke <lwarlowigalia.com>
Commit-Queue: Keith Cirkel <chromiumkeithcirkel.co.uk>
Cr-Commit-Position: refs/heads/main{#1367705}

--

wpt-commits: 5df7a2c02bb50efa0368910fd49242c08def7a5d
wpt-pr: 48581

UltraBlame original commit: 604a5ed051c0566ff7afefe33c36dfef96d6b950

--- a/testing/web-platform/tests/html/semantics/invokers/interesttarget-on-popover-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/interesttarget-on-popover-behavior.tentative.html
@@ -698,7 +698,9 @@ setAttribute
 interestaction
 "
 "
-togglepopover
+toggle
+-
+popover
 "
 )
 ;
@@ -782,7 +784,9 @@ setAttribute
 interestaction
 "
 "
-togglepopover
+toggle
+-
+popover
 "
 )
 ;
@@ -860,7 +864,9 @@ setAttribute
 interestaction
 "
 "
-togglepopover
+toggle
+-
+popover
 "
 )
 ;
@@ -944,7 +950,9 @@ setAttribute
 interestaction
 "
 "
-togglepopover
+toggle
+-
+popover
 "
 )
 ;
@@ -1022,7 +1030,9 @@ setAttribute
 interestaction
 "
 "
-tOgGlEpOpOvEr
+tOgGlE
+-
+pOpOvEr
 "
 )
 ;
