--- a/testing/web-platform/tests/html/semantics/invokers/invokeevent-dispatch-shadow.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invokeevent-dispatch-shadow.tentative.html
@@ -283,7 +283,7 @@ childEventTarget
 null
 ;
 let
-childEventInvoker
+childEventSource
 =
 null
 ;
@@ -298,7 +298,7 @@ hostEventTarget
 null
 ;
 let
-hostEventInvoker
+hostEventSource
 =
 null
 ;
@@ -325,11 +325,11 @@ e
 .
 target
 ;
-childEventInvoker
+childEventSource
 =
 e
 .
-invoker
+source
 ;
 }
 {
@@ -362,11 +362,11 @@ e
 .
 target
 ;
-hostEventInvoker
+hostEventSource
 =
 e
 .
-invoker
+source
 ;
 }
 {
@@ -389,7 +389,7 @@ command
 bubbles
 :
 true
-invoker
+source
 :
 slot
 composed
@@ -434,10 +434,10 @@ boundary
 ;
 assert_equals
 (
-childEventInvoker
+childEventSource
 slot
 "
-invoker
+source
 is
 child
 inside
@@ -476,10 +476,10 @@ host
 ;
 assert_equals
 (
-hostEventInvoker
+hostEventSource
 host
 "
-invoker
+source
 is
 retargeted
 to
@@ -496,7 +496,7 @@ across
 shadow
 boundaries
 retargeting
-invoker
+source
 "
 )
 ;
@@ -604,6 +604,8 @@ button
 command
 =
 '
+-
+-
 test
 -
 command
@@ -620,7 +622,7 @@ eventTarget
 null
 ;
 let
-eventInvoker
+eventSource
 =
 null
 ;
@@ -647,11 +649,11 @@ e
 .
 target
 ;
-eventInvoker
+eventSource
 =
 e
 .
-invoker
+source
 ;
 }
 {
@@ -687,10 +689,10 @@ invokee
 ;
 assert_equals
 (
-eventInvoker
+eventSource
 host
 "
-invoker
+source
 is
 host
 "
@@ -702,7 +704,7 @@ cross
 shadow
 CommandEvent
 retargets
-invoker
+source
 to
 host
 element
