--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-button-event-dispatch.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-button-event-dispatch.tentative.html
@@ -218,6 +218,8 @@ invokee
 command
 =
 "
+-
+-
 custom
 -
 command
@@ -226,6 +228,33 @@ command
 <
 /
 button
+>
+<
+input
+type
+=
+"
+button
+"
+id
+=
+"
+invalidbutton
+"
+commandfor
+=
+"
+invokee
+"
+command
+=
+"
+-
+-
+custom
+-
+command
+"
 >
 <
 form
@@ -288,6 +317,8 @@ setAttribute
 command
 "
 "
+-
+-
 custom
 -
 command
@@ -429,6 +460,8 @@ event
 .
 command
 "
+-
+-
 custom
 -
 command
@@ -453,7 +486,7 @@ assert_equals
 (
 event
 .
-invoker
+source
 invokerbutton
 "
 invoker
@@ -477,26 +510,35 @@ invokeactions
 [
 "
 -
+-
 foo
 "
 "
+-
+-
 foo
 -
 "
 "
+-
+-
 cAsE
 -
 cArRiEs
 "
 "
 -
+-
 "
 "
+-
 -
 a
 -
 "
 "
+-
+-
 a
 -
 b
@@ -507,6 +549,8 @@ b
 -
 "
 "
+-
+-
 show
 -
 picker
@@ -661,7 +705,7 @@ assert_equals
 (
 event
 .
-invoker
+source
 invokerbutton
 "
 invoker
@@ -831,7 +875,7 @@ assert_equals
 (
 event
 .
-invoker
+source
 invokerbutton
 "
 invoker
@@ -867,18 +911,27 @@ custom
 invokeactions
 [
 "
+-
 foo
 "
 "
-foobar
+-
+foo
+-
 "
 "
+foo
+-
+bar
+"
+"
+-
 foo
 bar
 "
 "
-em
-dash
+-
+emdash
 "
 "
 hidedocument
@@ -1172,6 +1225,78 @@ click
 preventDefault
 is
 called
+"
+)
+;
+promise_test
+(
+async
+function
+(
+t
+)
+{
+let
+event
+=
+null
+;
+invokee
+.
+addEventListener
+(
+"
+command
+"
+(
+e
+)
+=
+>
+(
+event
+=
+e
+)
+{
+once
+:
+true
+}
+)
+;
+await
+clickOn
+(
+invalidbutton
+)
+;
+assert_equals
+(
+event
+null
+"
+command
+should
+not
+have
+fired
+"
+)
+;
+}
+"
+event
+does
+not
+dispatch
+on
+input
+[
+type
+=
+button
+]
 "
 )
 ;
@@ -1579,6 +1704,8 @@ setAttribute
 command
 "
 "
+-
+-
 custom
 -
 command
@@ -1626,7 +1753,7 @@ assert_equals
 (
 event
 .
-invoker
+source
 invokerbutton
 "
 event
