--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-fullscreen-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-fullscreen-behavior.tentative.html
@@ -237,7 +237,9 @@ setAttribute
 command
 "
 "
-toggleFullscreen
+toggle
+-
+fullscreen
 "
 )
 ;
@@ -257,7 +259,9 @@ exitFullscreen
 }
 /
 /
-toggleFullscreen
+toggle
+-
+fullscreen
 promise_test
 (
 async
@@ -294,7 +298,9 @@ setAttribute
 command
 "
 "
-toggleFullscreen
+toggle
+-
+fullscreen
 "
 )
 ;
@@ -322,7 +328,9 @@ fullscreen
 invoking
 div
 with
-toggleFullscreen
+toggle
+-
+fullscreen
 action
 makes
 div
@@ -366,7 +374,9 @@ setAttribute
 command
 "
 "
-toggleFullscreen
+toggle
+-
+fullscreen
 "
 )
 ;
@@ -394,7 +404,9 @@ fullscreen
 invoking
 div
 with
-toggleFullscreen
+toggle
+-
+fullscreen
 action
 (
 without
@@ -469,7 +481,9 @@ setAttribute
 command
 "
 "
-toggleFullscreen
+toggle
+-
+fullscreen
 "
 )
 ;
@@ -497,7 +511,9 @@ fullscreen
 invoking
 div
 with
-toggleFullscreen
+toggle
+-
+fullscreen
 action
 and
 preventDefault
@@ -532,7 +548,9 @@ setAttribute
 command
 "
 "
-toggleFullscreen
+toggle
+-
+fullscreen
 "
 )
 ;
@@ -592,7 +610,9 @@ invoking
 fullscreen
 div
 with
-toggleFullscreen
+toggle
+-
+fullscreen
 action
 exits
 fullscreen
@@ -622,7 +642,9 @@ setAttribute
 command
 "
 "
-tOgGlEFullscreen
+tOgGlE
+-
+Fullscreen
 "
 )
 ;
@@ -682,7 +704,9 @@ invoking
 fullscreen
 div
 with
-toggleFullscreen
+toggle
+-
+fullscreen
 (
 case
 -
@@ -696,7 +720,9 @@ fullscreen
 ;
 /
 /
-requestFullscreen
+request
+-
+fullscreen
 promise_test
 (
 async
@@ -733,7 +759,9 @@ setAttribute
 command
 "
 "
-requestFullscreen
+request
+-
+fullscreen
 "
 )
 ;
@@ -761,7 +789,9 @@ fullscreen
 invoking
 div
 with
-requestFullscreen
+request
+-
+fullscreen
 action
 makes
 div
@@ -829,7 +859,9 @@ setAttribute
 command
 "
 "
-requestFullscreen
+request
+-
+fullscreen
 "
 )
 ;
@@ -857,7 +889,9 @@ fullscreen
 invoking
 div
 with
-requestFullscreen
+request
+-
+fullscreen
 action
 and
 preventDefault
@@ -892,7 +926,9 @@ setAttribute
 command
 "
 "
-requestFullscreen
+request
+-
+fullscreen
 "
 )
 ;
@@ -952,7 +988,9 @@ invoking
 fullscreen
 div
 with
-requestFullscreen
+request
+-
+fullscreen
 action
 is
 a
@@ -1001,7 +1039,9 @@ setAttribute
 command
 "
 "
-exitFullscreen
+exit
+-
+fullscreen
 "
 )
 ;
@@ -1029,7 +1069,9 @@ fullscreen
 invoking
 div
 with
-exitFullscreen
+exit
+-
+fullscreen
 action
 is
 a
@@ -1062,7 +1104,9 @@ setAttribute
 command
 "
 "
-exitFullscreen
+exit
+-
+fullscreen
 "
 )
 ;
@@ -1122,7 +1166,9 @@ invoking
 fullscreen
 div
 with
-exitFullscreen
+exit
+-
+fullscreen
 action
 exits
 fullscreen
@@ -1176,7 +1222,9 @@ setAttribute
 command
 "
 "
-exitFullscreen
+exit
+-
+fullscreen
 "
 )
 ;
@@ -1236,7 +1284,9 @@ invoking
 fullscreen
 div
 with
-exitFullscreen
+exit
+-
+fullscreen
 action
 and
 preventDefault
