--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-audio-invalid-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-audio-invalid-behavior.tentative.html
@@ -249,13 +249,22 @@ foo
 bar
 "
 "
-showpopover
+playpause
 "
 "
-showmodal
+show
+-
+popover
 "
 "
-showpicker
+show
+-
+modal
+"
+"
+show
+-
+picker
 "
 "
 open
