--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-details-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-details-behavior.tentative.html
@@ -319,6 +319,15 @@ open
 ]
 "
 )
+"
+invokee
+does
+not
+match
+[
+open
+]
+"
 )
 ;
 await
@@ -339,6 +348,13 @@ open
 ]
 "
 )
+"
+invokee
+matches
+[
+open
+]
+"
 )
 ;
 }
@@ -387,6 +403,15 @@ open
 ]
 "
 )
+"
+invokee
+does
+not
+match
+[
+open
+]
+"
 )
 ;
 invokee
@@ -449,6 +474,16 @@ open
 ]
 "
 )
+"
+invokee
+still
+does
+not
+match
+[
+open
+]
+"
 )
 ;
 }
