--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-details-invalid-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-details-invalid-behavior.tentative.html
@@ -269,22 +269,32 @@ foo
 bar
 "
 "
-showpopover
+show
+-
+popover
 "
 "
-showmodal
+show
+-
+modal
 "
 "
-showpicker
+show
+-
+picker
 "
 "
-hidepopover
+hide
+-
+popover
 "
 "
 hide
 "
 "
-toggleopen
+toggle
+-
+open
 "
 ]
 .
