--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-dialog-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-dialog-behavior.tentative.html
@@ -239,7 +239,9 @@ invokee
 command
 =
 "
-showmodal
+show
+-
+modal
 "
 >
 <
@@ -289,7 +291,9 @@ setAttribute
 command
 "
 "
-showmodal
+show
+-
+modal
 "
 )
 ;
@@ -313,7 +317,9 @@ a
 dialog
 [
 "
-showmodal
+show
+-
+modal
 "
 /
 *
@@ -323,7 +329,9 @@ sensitivity
 *
 /
 "
-sHoWmOdAl
+sHoW
+-
+mOdAl
 "
 ]
 .
@@ -1707,7 +1715,9 @@ closes
 ;
 /
 /
-showmodal
+show
+-
+modal
 explicit
 behaviours
 promise_test
@@ -1733,7 +1743,9 @@ setAttribute
 command
 "
 "
-showModal
+show
+-
+Modal
 "
 )
 ;
@@ -1814,7 +1826,9 @@ modal
 invoking
 (
 as
-showmodal
+show
+-
+modal
 )
 open
 dialog
@@ -1846,7 +1860,9 @@ setAttribute
 command
 "
 "
-showmodal
+show
+-
+modal
 "
 )
 ;
@@ -1960,7 +1976,9 @@ modal
 invoking
 (
 as
-showmodal
+show
+-
+modal
 )
 open
 modal
@@ -1998,7 +2016,9 @@ setAttribute
 command
 "
 "
-showmodal
+show
+-
+modal
 "
 )
 ;
@@ -2085,7 +2105,9 @@ modal
 invoking
 (
 as
-showmodal
+show
+-
+modal
 )
 closed
 popover
@@ -2218,7 +2240,9 @@ Dialog
 actions
 [
 "
-showmodal
+show
+-
+modal
 "
 "
 close
@@ -2461,7 +2485,9 @@ invoke
 steps
 [
 "
-showmodal
+show
+-
+modal
 "
 "
 close
