--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-dialog-invalid-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-dialog-invalid-behavior.tentative.html
@@ -318,16 +318,27 @@ bar
 auto
 "
 "
-showpopover
+showmodal
 "
 "
-hidepopover
+show
+-
+popover
 "
 "
-togglepopover
+hide
+-
+popover
 "
 "
-showpicker
+toggle
+-
+popover
+"
+"
+show
+-
+picker
 "
 ]
 .
@@ -829,7 +840,9 @@ Dialog
 actions
 [
 "
-showmodal
+show
+-
+modal
 "
 "
 close
