--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-input-number.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-input-number.tentative.html
@@ -236,7 +236,9 @@ command
 }
 /
 /
-stepUp
+step
+-
+up
 promise_test
 (
 async
@@ -268,7 +270,9 @@ setAttribute
 command
 "
 "
-stepup
+step
+-
+up
 "
 )
 ;
@@ -292,7 +296,9 @@ invoking
 number
 input
 with
-stepup
+step
+-
+up
 action
 increments
 value
@@ -330,7 +336,9 @@ setAttribute
 command
 "
 "
-sTePuP
+sTeP
+-
+uP
 "
 )
 ;
@@ -354,7 +362,9 @@ invoking
 number
 input
 with
-stepup
+step
+-
+up
 action
 (
 case
@@ -397,7 +407,9 @@ setAttribute
 command
 "
 "
-stepup
+step
+-
+up
 "
 )
 ;
@@ -445,7 +457,9 @@ invoking
 number
 input
 with
-stepup
+step
+-
+up
 action
 and
 preventDefault
@@ -458,7 +472,9 @@ value
 ;
 /
 /
-stepDown
+step
+-
+down
 promise_test
 (
 async
@@ -490,7 +506,9 @@ setAttribute
 command
 "
 "
-stepdown
+step
+-
+down
 "
 )
 ;
@@ -515,7 +533,9 @@ invoking
 number
 input
 with
-stepdown
+step
+-
+down
 action
 decrements
 value
@@ -553,7 +573,9 @@ setAttribute
 command
 "
 "
-sTePdOwN
+sTeP
+-
+dOwN
 "
 )
 ;
@@ -578,7 +600,9 @@ invoking
 number
 input
 with
-stepdown
+step
+-
+down
 action
 (
 case
@@ -621,7 +645,9 @@ setAttribute
 command
 "
 "
-stepdown
+step
+-
+down
 "
 )
 ;
@@ -669,7 +695,9 @@ invoking
 number
 input
 with
-stepdown
+step
+-
+down
 action
 and
 preventDefault
