--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-popover-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-popover-behavior.tentative.html
@@ -215,7 +215,9 @@ invokee
 command
 =
 "
-hidepopover
+hide
+-
+popover
 "
 >
 <
@@ -241,7 +243,9 @@ invokee
 command
 =
 "
-togglepopover
+toggle
+-
+popover
 "
 >
 <
@@ -276,7 +280,9 @@ setAttribute
 command
 "
 "
-togglepopover
+toggle
+-
+popover
 "
 )
 ;
@@ -300,7 +306,9 @@ setAttribute
 command
 "
 "
-closepopover
+hide
+-
+popover
 "
 )
 ;
@@ -372,7 +380,9 @@ setAttribute
 command
 '
 '
-hidepopover
+hide
+-
+popover
 '
 )
 ;
@@ -434,10 +444,14 @@ Open
 actions
 [
 "
-togglepopover
+toggle
+-
+popover
 "
 "
-showpopover
+show
+-
+popover
 "
 /
 *
@@ -447,10 +461,14 @@ sensitivity
 *
 /
 "
-tOgGlEpOpOvEr
+tOgGlE
+-
+pOpOvEr
 "
 "
-sHoWpOpOvEr
+sHoW
+-
+pOpOvEr
 "
 ]
 .
@@ -639,10 +657,14 @@ Close
 actions
 [
 "
-togglepopover
+toggle
+-
+popover
 "
 "
-hidepopover
+hide
+-
+popover
 "
 /
 *
@@ -652,10 +674,14 @@ sensitivity
 *
 /
 "
-tOgGlEpOpOvEr
+tOgGlE
+-
+pOpOvEr
 "
 "
-hIdEpOpOvEr
+hIdE
+-
+pOpOvEr
 "
 ]
 .
@@ -1036,7 +1062,9 @@ close
 ;
 /
 /
-showpopover
+show
+-
+popover
 specific
 promise_test
 (
@@ -1061,7 +1089,9 @@ setAttribute
 command
 "
 "
-showpopover
+show
+-
+popover
 "
 )
 ;
@@ -1112,7 +1142,9 @@ open
 invoking
 (
 as
-showpopover
+show
+-
+popover
 )
 open
 popover
@@ -1123,7 +1155,9 @@ noop
 ;
 /
 /
-hidepopover
+hide
+-
+popover
 specific
 promise_test
 (
@@ -1148,7 +1182,9 @@ setAttribute
 command
 "
 "
-hidepopover
+hide
+-
+popover
 "
 )
 ;
@@ -1193,7 +1229,9 @@ open
 invoking
 (
 as
-hidepopover
+hide
+-
+popover
 )
 closed
 popover
