--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-popover-invalid-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-popover-invalid-behavior.tentative.html
@@ -293,7 +293,9 @@ popover
 invalid
 actions
 on
-showpopover
+show
+-
+popover
 [
 null
 "
@@ -304,10 +306,17 @@ foo
 bar
 "
 "
-showmodal
+showpopover
 "
 "
-showpicker
+show
+-
+modal
+"
+"
+show
+-
+picker
 "
 "
 open
