--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html
@@ -234,7 +234,9 @@ script
 >
 /
 /
-playpause
+play
+-
+pause
 promise_test
 (
 async
@@ -298,7 +300,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -338,7 +342,9 @@ paused
 invoking
 video
 with
-playpause
+play
+-
+pause
 action
 makes
 video
@@ -433,7 +439,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -473,7 +481,9 @@ paused
 invoking
 video
 with
-playpause
+play
+-
+pause
 action
 and
 preventDefault
@@ -565,7 +575,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -606,7 +618,9 @@ invoking
 playing
 video
 with
-playpause
+play
+-
+pause
 action
 pauses
 it
@@ -1447,7 +1461,9 @@ setAttribute
 command
 "
 "
-toggleMuted
+toggle
+-
+muted
 "
 )
 ;
@@ -1487,7 +1503,9 @@ muted
 invoking
 video
 with
-toggleMuted
+toggle
+-
+muted
 action
 mutes
 it
@@ -1581,7 +1599,9 @@ setAttribute
 command
 "
 "
-toggleMuted
+toggle
+-
+muted
 "
 )
 ;
@@ -1621,7 +1641,9 @@ muted
 invoking
 video
 with
-toggleMuted
+toggle
+-
+muted
 action
 and
 preventDefault
@@ -1702,7 +1724,9 @@ setAttribute
 command
 "
 "
-toggleMuted
+toggle
+-
+muted
 "
 )
 ;
@@ -1743,7 +1767,9 @@ invoking
 muted
 video
 with
-toggleMuted
+toggle
+-
+muted
 action
 unmutes
 it
