--- a/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-audio-behavior.tentative.html
+++ b/testing/web-platform/tests/html/semantics/invokers/invoketarget-on-audio-behavior.tentative.html
@@ -275,7 +275,9 @@ false
 }
 /
 /
-playpause
+play
+-
+pause
 promise_test
 (
 async
@@ -306,7 +308,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -346,7 +350,9 @@ paused
 invoking
 audio
 with
-playpause
+play
+-
+pause
 action
 makes
 audio
@@ -384,7 +390,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -424,7 +432,9 @@ paused
 invoking
 audio
 with
-playpause
+play
+-
+pause
 action
 (
 without
@@ -493,7 +503,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -533,7 +545,9 @@ paused
 invoking
 audio
 with
-playpause
+play
+-
+pause
 action
 and
 preventDefault
@@ -592,7 +606,9 @@ setAttribute
 command
 "
 "
-playpause
+play
+-
+pause
 "
 )
 ;
@@ -633,7 +649,9 @@ invoking
 playing
 audio
 with
-playpause
+play
+-
+pause
 action
 pauses
 it
@@ -1328,7 +1346,9 @@ setAttribute
 command
 "
 "
-toggleMuted
+toggle
+-
+muted
 "
 )
 ;
@@ -1368,7 +1388,9 @@ muted
 invoking
 audio
 with
-toggleMuted
+toggle
+-
+muted
 action
 mutes
 it
@@ -1429,7 +1451,9 @@ setAttribute
 command
 "
 "
-toggleMuted
+toggle
+-
+muted
 "
 )
 ;
@@ -1469,7 +1493,9 @@ muted
 invoking
 audio
 with
-toggleMuted
+toggle
+-
+muted
 action
 and
 preventDefault
@@ -1517,7 +1543,9 @@ setAttribute
 command
 "
 "
-toggleMuted
+toggle
+-
+muted
 "
 )
 ;
@@ -1558,7 +1586,9 @@ invoking
 muted
 audio
 with
-toggleMuted
+toggle
+-
+muted
 action
 unmutes
 it
