Bug 1924153 [wpt PR 48579] - [fenced-frames] Migrate WebAuthn test, a=testonly
Automatic update from web-platform-tests
[fenced-frames] Migrate WebAuthn test

Migrate a fenced frames WebAuthn test to run on headless chrome with
chromedriver instead of the legacy content shell runner. The legacy
content shell runner will stop supporting the WebAuthn testdriver API,
soon.

Fix the test to set up the virtual authenticator environment on the top
frame instead, since testdriver should be invoked from the same window
hosting the testharness.

Bug: 372169469
Change-Id: I6e1b296fe86ee4087da2a5a63868e18a6b440984
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5920770
Auto-Submit: Nina Satragno <nsatragnochromium.org>
Reviewed-by: Liam Brady <lbradygoogle.com>
Commit-Queue: Liam Brady <lbradygoogle.com>
Cr-Commit-Position: refs/heads/main{#1367535}

--

wpt-commits: 5611c150825562522da2d6be67b929e399211c35
wpt-pr: 48579

UltraBlame original commit: 10de9521e5903d8e9a79ef6713a172b0a69f261e

--- a/testing/web-platform/tests/fenced-frame/create-credential.https.html
+++ b/testing/web-platform/tests/fenced-frame/create-credential.https.html
@@ -72,6 +72,59 @@ src
 =
 "
 /
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+webauthn
+/
+helpers
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
 common
 /
 utils
@@ -105,6 +158,12 @@ body
 <
 script
 >
+standardSetup
+(
+function
+(
+)
+{
 promise_test
 (
 async
@@ -189,6 +248,9 @@ credentials
 .
 create
 '
+)
+;
+}
 )
 ;
 <
