Bug 1911736 - Enable dom.popup.experimental on Nightly, r=edgar
Differential Revision: https://phabricator.services.mozilla.com/D225518

UltraBlame original commit: c76a33e9a09dbb3f8cce01b0fbf7117e1005b8e6

--- a/dom/base/test/useractivation/test_popup_blocker_mouse_event.html
+++ b/dom/base/test/useractivation/test_popup_blocker_mouse_event.html
@@ -136,21 +136,10 @@ div
 <
 script
 >
-const
+var
 experimental
 =
-SpecialPowers
-.
-getBoolPref
-(
-"
-dom
-.
-popup
-.
-experimental
-"
-)
+false
 ;
 function
 sendMouseEvent
@@ -436,13 +425,109 @@ target
 "
 )
 ;
-add_task
+async
+function
+beginTest
 (
+)
+{
+if
+(
+!
+experimental
+)
+{
+info
+(
+"
+NOT
+EXPERIMENTAL
+"
+)
+;
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+popup
+.
+experimental
+"
+false
+]
+]
+}
+)
+;
+}
+else
+{
+info
+(
+"
+EXPERIMENTAL
+"
+)
+;
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+popup
+.
+experimental
+"
+true
+]
+]
+}
+)
+;
+}
+}
+async
+function
+endTest
+(
+)
+{
+await
+SpecialPowers
+.
+popPrefEnv
+(
+)
+;
+}
+async
 function
 testMouseDownUpMove
 (
 )
 {
+await
+beginTest
+(
+)
+;
 /
 /
 Left
@@ -576,16 +661,23 @@ mouseup
 checkBlockOpenPopup
 )
 ;
-}
+await
+endTest
+(
 )
 ;
-add_task
-(
+}
+async
 function
 testMouseClick
 (
 )
 {
+await
+beginTest
+(
+)
+;
 /
 /
 Left
@@ -612,16 +704,23 @@ click
 checkAllowOpenPopup
 )
 ;
-}
+await
+endTest
+(
 )
 ;
-add_task
-(
+}
+async
 function
 testMouseAuxclick
 (
 )
 {
+await
+beginTest
+(
+)
+;
 /
 /
 Middle
@@ -674,7 +773,51 @@ auxclick
 checkAllowOpenPopup
 )
 ;
+await
+endTest
+(
+)
+;
 }
+add_task
+(
+testMouseDownUpMove
+)
+;
+add_task
+(
+testMouseClick
+)
+;
+add_task
+(
+testMouseAuxclick
+)
+;
+add_task
+(
+(
+)
+=
+>
+experimental
+=
+true
+)
+;
+add_task
+(
+testMouseDownUpMove
+)
+;
+add_task
+(
+testMouseClick
+)
+;
+add_task
+(
+testMouseAuxclick
 )
 ;
 <
