--- a/dom/base/test/useractivation/test_popup_blocker_pointer_event.html
+++ b/dom/base/test/useractivation/test_popup_blocker_pointer_event.html
@@ -136,21 +136,10 @@ div
 <
 script
 >
-const
+let
 experimental
 =
-SpecialPowers
-.
-getBoolPref
-(
-"
-dom
-.
-popup
-.
-experimental
-"
-)
+false
 ;
 function
 sendMouseEvent
@@ -364,74 +353,6 @@ function
 (
 )
 {
-if
-(
-experimental
-)
-{
-/
-/
-This
-is
-a
-rather
-fragile
-test
-when
-experimental
-pref
-isn
-'
-t
-enabled
-.
-/
-/
-Use
-default
-prefs
-in
-experimental
-case
-.
-SpecialPowers
-.
-wrap
-(
-document
-)
-.
-clearUserGestureActivation
-(
-)
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-set
-:
-[
-/
-/
-Enable
-popup
-blocker
-[
-"
-dom
-.
-disable_open_during_load
-"
-true
-]
-]
-}
-)
-;
-}
 const
 DENY_ACTION
 =
@@ -560,14 +481,158 @@ target
 "
 )
 ;
-add_task
+async
+function
+beginTest
 (
+)
+{
+if
+(
+!
+experimental
+)
+{
+info
+(
+"
+NOT
+EXPERIMENTAL
+"
+)
+;
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+popup
+.
+experimental
+"
+false
+]
+]
+}
+)
+;
+}
+else
+{
+info
+(
+"
+EXPERIMENTAL
+"
+)
+;
+/
+/
+This
+is
+a
+rather
+fragile
+test
+when
+experimental
+pref
+isn
+'
+t
+enabled
+.
+/
+/
+Use
+default
+prefs
+in
+experimental
+case
+.
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+clearUserGestureActivation
+(
+)
+;
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+popup
+.
+experimental
+"
+true
+]
+/
+/
+Enable
+popup
+blocker
+[
+"
+dom
+.
+disable_open_during_load
+"
+true
+]
+]
+}
+)
+;
+}
+}
+async
+function
+endTest
+(
+)
+{
+await
+SpecialPowers
+.
+popPrefEnv
+(
+)
+;
+}
 async
 function
 testPointerEventDefault
 (
 )
 {
+await
+beginTest
+(
+)
+;
 /
 /
 By
@@ -722,17 +787,24 @@ pointerup
 checkBlockOpenPopup
 )
 ;
-}
+await
+endTest
+(
 )
 ;
-add_task
-(
+}
+;
 async
 function
 testPointerEventAddPointerDownToPref
 (
 )
 {
+await
+beginTest
+(
+)
+;
 /
 /
 Adding
@@ -906,17 +978,30 @@ pointerup
 checkBlockOpenPopup
 )
 ;
-}
+await
+SpecialPowers
+.
+popPrefEnv
+(
 )
 ;
-add_task
+await
+endTest
 (
+)
+;
+}
 async
 function
 testPointerEventAddPointerMoveToPref
 (
 )
 {
+await
+beginTest
+(
+)
+;
 /
 /
 Adding
@@ -1096,7 +1181,58 @@ pointerup
 checkBlockOpenPopup
 )
 ;
+await
+SpecialPowers
+.
+popPrefEnv
+(
+)
+;
+await
+endTest
+(
+)
+;
 }
+add_task
+(
+testPointerEventDefault
+)
+;
+add_task
+(
+testPointerEventAddPointerDownToPref
+)
+;
+add_task
+(
+testPointerEventAddPointerMoveToPref
+)
+;
+add_task
+(
+(
+)
+=
+>
+experimental
+=
+true
+)
+;
+add_task
+(
+testPointerEventDefault
+)
+;
+add_task
+(
+testPointerEventAddPointerDownToPref
+)
+;
+add_task
+(
+testPointerEventAddPointerMoveToPref
 )
 ;
 <
