Bug 282266 - Populate imageClickedPoint when submitter is an image button. r=dom-core,layout-reviewers,emilio,masayuki
If the form submission originated from an event dispatch, this patch
ensures that the submitted image button coordinate is not the default.

Differential Revision: https://phabricator.services.mozilla.com/D224651

UltraBlame original commit: e37003ee9eec69cb07182f1656326725961bc183

--- a/testing/web-platform/tests/xhr/formdata/constructor-submitter-coordinate.html
+++ b/testing/web-platform/tests/xhr/formdata/constructor-submitter-coordinate.html
@@ -14,6 +14,26 @@ utf
 '
 >
 <
+meta
+name
+=
+viewport
+content
+=
+'
+width
+=
+device
+-
+width
+initial
+-
+scale
+=
+1
+'
+>
+<
 link
 rel
 =
@@ -130,18 +150,16 @@ src
 =
 '
 /
-media
+images
 /
-1x1
+100px
 -
 green
+-
+rect
 .
-png
+svg
 '
->
-<
-/
-button
 >
 <
 /
@@ -155,13 +173,32 @@ use
 strict
 "
 ;
-test
+promise_test
 (
+async
 (
 )
 =
 >
 {
+await
+new
+Promise
+(
+r
+=
+>
+window
+.
+addEventListener
+(
+"
+load
+"
+r
+)
+)
+;
 const
 form
 =
@@ -232,6 +269,46 @@ getBoundingClientRect
 (
 )
 ;
+const
+clientX
+=
+Math
+.
+round
+(
+(
+domRect
+.
+left
++
+domRect
+.
+right
+)
+/
+7
+)
+;
+const
+clientY
+=
+Math
+.
+round
+(
+(
+domRect
+.
+top
++
+domRect
+.
+bottom
+)
+/
+4
+)
+;
 submitter
 .
 dispatchEvent
@@ -244,29 +321,7 @@ click
 "
 {
 clientX
-:
-Math
-.
-round
-(
-domRect
-.
-x
-)
-+
-1
 clientY
-:
-Math
-.
-round
-(
-domRect
-.
-y
-)
-+
-2
 }
 )
 )
@@ -283,7 +338,7 @@ x
 "
 )
 "
-1
+23
 "
 )
 ;
@@ -299,7 +354,7 @@ y
 "
 )
 "
-2
+46
 "
 )
 ;
